@@ -103,10 +103,28 @@
 			[row]
 
 				[column]
+					horizontal_grow = "true"
+					vertical_grow = "true"
+					[scrollbar_panel]
+						vertical_scrollbar_mode = "initial_auto"
+						horizontal_scrollbar_mode = "initial_auto"
+						[definition]
 
-					[grid]
-						id = "_content_grid"
-					[/grid]
+							[row]
+
+								[column]
+
+									[grid]
+										id = "_window_content_grid"
+									[/grid]
+
+								[/column]
+
+							[/row]
+
+						[/definition]
+
+					[/scrollbar_panel]
 
 				[/column]
 
