@@ -14,6 +14,7 @@ Version 1.7.7+svn:
    * Fix not being able to close corrupted file dialog (bug #13764, #14058)
    * Improve display order of unit healing (patch #1343)
    * Fix the new-widgets addon list dialog
+   * Add fallback scrollbars if a window doesn't fit (bug #13180)
 
 Version 1.7.7:
  * AI:
